# Python-Hub

./: .replit  README.md  pnpm-lock.yaml
artifacts/api-server/src/routes/: execute.ts  index.ts  project.ts
artifacts/python-repl/: index.html  package.json
artifacts/python-repl/.replit-artifact/: artifact.toml
artifacts/python-repl/src/: App.tsx  index.css
artifacts/python-repl/src/pages/: repl.tsx
iot-telemetry-normalizer/: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  run.py
iot-telemetry-normalizer/.github/workflows/: ci.yml
iot-telemetry-normalizer/data/input/: sample_telemetry.json
iot-telemetry-normalizer/src/: __init__.py  logger_config.py  normalizer.py
iot-telemetry-normalizer/tests/: test_normalizer.py
lib/api-spec/: openapi.yaml
