[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "iot-telemetry-normalizer"
version = "1.0.0"
description = "A lightweight Python pipeline that normalises heterogeneous IoT device telemetry into a consistent JSON schema."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []   # stdlib only — nothing to install

[project.optional-dependencies]
dev = []            # no dev deps beyond stdlib unittest

[project.scripts]
normalizer = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
